FAIRPC-29: reduced number of calls to db on metadata request per view (#1477)
FAIRPC-29: reduced number of calls to db on metadata request per view by mean of introducing materialized views